# flight-finder

./: .coverage  .dockerignore  Dockerfile  Makefile  README.md  cli.py  global_airports_sqlite.db  main.py  pyproject.toml
.github/workflows/: push-main.yml
find_cities/: airports_int.py  airports_table_sqlite.py  amadeus_api.py  api_int.py  cacher_int.py  caching_crust.py  find.py  mathematics.py  sqlite_cacher.py  utils.py
find_cities/airports_table/: airports_table_int.py  airports_table_sqlite.py
find_cities/api/: amadeus_api.py  api_int.py  caching_crust.py  caching_wrapper.py
find_cities/cacher/: cacher_int.py  sqlite_cacher.py
flight_finder/: find.py  utils.py
flight_finder/airports_table/: airports_table_sqlite.py
flight_finder/api/: amadeus_api.py  api_int.py  caching_wrapper.py
flight_finder/cacher/: sqlite_cacher.py
tests/find_cities/: test_airports_int.py  test_airports_table_sqlite.py  test_amadeus_api.py  test_caching_crust.py  test_find.py  test_mathematics.py  test_sqlite_cacher.py  test_utils.py
tests/find_cities/airports_table/: test_airports_table_sqlite.py
tests/find_cities/api/: test_amadeus_api.py  test_caching_crust.py
tests/find_cities/cacher/: test_sqlite_cacher.py
tests/flight_finder/: test_find.py
tests/flight_finder/api/: test_caching_crust.py
