[tool.poetry]
name = "find-cities"
version = "0.1.0"
description = ""
authors = ["Pedro Cleto <cl3t0.sh@gmail.com>"]
readme = "README.md"
packages = [{include = "find_cities"}]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.12.0"
requests = "^2.28.2"
pytest = "^7.2.1"
python-decouple = "^3.7"
mypy = "^0.991"
types-requests = "^2.28.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["integ"]