[tool.poetry]
name = "flight-finder"
version = "0.1.0"
description = ""
authors = ["Pedro Cleto <cl3t0.sh@gmail.com>"]
readme = "README.md"
packages = [{include = "flight_finder"}]

[tool.poetry.dependencies]
python = "3.10.9"
black = "^22.12.0"
requests = "^2.28.2"
pytest = "^7.2.1"
python-decouple = "^3.7"
mypy = "^0.991"
types-requests = "^2.28.11.8"
result = "^0.9.0"


[build-system]
requires = ["poetry-core", "poetry>=1.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["integ"]